tests/baselines/reference/moduleResolutionWithSuffixes_one_jsonModule.errors.txt
/tsconfig.json(6,23): error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /tsconfig.json (1 errors) ====
    {
    	"compilerOptions": {
    		"esModuleInterop": true,
    		"resolveJsonModule": true,
    		"outDir": "bin",
    		"moduleResolution": "node",
    		                    ~~~~~~
!!! error TS5107: Option 'moduleResolution=node10' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107:   Visit https://aka.ms/ts6 for migration information.
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"]
    	}
    }
    
==== /index.ts (0 errors) ====
    import foo from "./foo.json";
    console.log(foo.ios);
==== /foo.ios.json (0 errors) ====
    {
    	"ios": "platform ios"
    }
==== /foo.json (0 errors) ====
    {
    	"base": "platform base"
    }
    